# smpp34

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  VERSIONING.md  clippy.toml  deny.toml  pyproject.toml
.github/workflows/: audit.yml  ci.yml  release.yaml
benches/: codec.rs
docs/: COMPARISON.md  COMPLIANCE.md  OVERVIEW.md
examples/: client.rs  leak_check.rs  perf_esme.rs  perf_loopback.rs  perf_smsc.rs  server.rs
perf/: Dockerfile  docker-compose.yml
python/examples/: client.py  server.py
python/perf/: leak_check.py  perf_loopback.py  perf_threads.py
python/smpp34/: __init__.py  _smpp34.pyi
python/tests/: test_async.py  test_codec.py
scripts/: flamegraph.sh  mem_leak_test.sh
src/: lib.rs  python.rs
src/client/: mod.rs
src/common/: mod.rs  tlv.rs
src/common/commands/: alert_notification.rs  bind_receiver.rs  bind_transceiver.rs  bind_transmitter.rs  cancel_sm.rs  data_sm.rs  deliver_sm.rs  enquire_link.rs  generic_nack.rs  mod.rs  outbind.rs  query_sm.rs  replace_sm.rs  submit_sm.rs  submit_sm_multi.rs  unbind.rs
src/server/: mod.rs  state.rs
tests/: client.rs  framing.rs  integration_test.rs  query_replace.rs  server.rs
