[package]
name = "smpp34"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.2"
num-derive = "0.4.0"
num-traits = "0.2"
log = "0.4"
env_logger = "0.10.0"
futures = "0.3"
bytes = "1.4.0"
test-log = "0.2.12"
serde = { version = "1.0.205", features = ["derive"] }
nom = "7.1.3"
chrono = "0.4.38"
tokio-native-tls = "0.3.1"
async-trait = "0.1.88"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
