[package]
name = "smpp34"
version = "1.1.0"
edition = "2021"
rust-version = "1.80"
description = "Pure-Rust SMPP 3.4 codec with an async (tokio) client and server"
authors = ["Real Time Telecom B.V."]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Real-Time-Telecom-B-V/smpp34"
homepage = "https://github.com/Real-Time-Telecom-B-V/smpp34"
keywords = ["smpp", "sms", "smsc", "esme", "telecom"]
categories = ["network-programming"]
exclude = [".github/", "docs/"]

[dependencies]
tokio = { version = "1", features = ["full"] }
num-derive = "0.4.0"
num-traits = "0.2"
log = "0.4"
futures = "0.3"
bytes = "1.4.0"
serde = { version = "1.0.205", features = ["derive"] }
nom = "8"
chrono = "0.4.38"
tokio-native-tls = "0.3.1"
async-trait = "0.1.88"
downcast-rs = "2.0.1"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
# Test-only logging: `test-log` installs a logger per test; it pulls env_logger.
env_logger = "0.11"
test-log = "0.2.12"

[lints.clippy]
# Bug-catching tier denied; style/dead-code stay at default warn (CI runs
# `cargo clippy --all-targets` and honours these levels).
correctness = { level = "deny", priority = -1 }
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
