[package]
name = "smpp34"
version = "1.2.0"
edition = "2021"
rust-version = "1.80"
description = "Pure-Rust SMPP 3.4 codec with an async (tokio) client and server"
authors = ["Real Time Telecom B.V."]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Real-Time-Telecom-B-V/smpp34"
homepage = "https://github.com/Real-Time-Telecom-B-V/smpp34"
keywords = ["smpp", "sms", "smsc", "esme", "telecom"]
categories = ["network-programming"]
# Keep CI/build scaffolding out of the crates.io package. `python/` (the wheel's
# pure-Python shim + pytest) and `pyproject.toml` ship harmlessly, but the test
# suite under `python/tests/` is dev-only.
exclude = [".github/", "docs/", "perf/", "scripts/", "python/tests/"]

# cdylib  → maturin/PyO3 build the loadable extension module (the wheel).
# rlib    → crates.io consumers link this; the cdylib is inert for them.
# Building both is the standard PyO3 mixed-layout setup (pydantic-core, orjson).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
num-derive = "0.5.1"
num-traits = "0.2"
log = "0.4"
futures = "0.3"
bytes = "1.4.0"
serde = { version = "1.0.205", features = ["derive"] }
nom = "8"
chrono = "0.4.38"
tokio-native-tls = "0.3.1"
async-trait = "0.1.88"
downcast-rs = "2.0.1"

# Optional Python bindings (feature = "python"). Kept out of the default build so
# `cargo add smpp34` and crates.io consumers pull ZERO pyo3. pyo3 >= 0.28 defaults
# modules to `gil_used = false`, so the extension loads on free-threaded ("no-GIL")
# CPython without re-enabling the GIL. abi3-py39 → one forward-compatible wheel for
# regular CPython 3.9+ (free-threaded wheels are built version-specific instead).
pyo3 = { version = "0.29", optional = true, features = ["abi3-py39"] }
pyo3-async-runtimes = { version = "0.29", optional = true, features = ["tokio-runtime"] }

[features]
default = []
# Links libpython; enables the bindings. Used by `cargo {test,clippy} --features python`.
python = ["dep:pyo3", "dep:pyo3-async-runtimes"]
# Wheel-only: maturin sets this. `pyo3/extension-module` tells pyo3 NOT to link
# libpython, which breaks a Rust test binary — so this is NEVER enabled by
# `cargo test`/`cargo clippy` (and CI must not use `--all-features`).
extension-module = ["python", "pyo3/extension-module"]

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
# Test-only logging: `test-log` installs a logger per test; it pulls env_logger.
env_logger = "0.11"
test-log = "0.2.12"
criterion = "0.8"

[[bench]]
name = "codec"
harness = false

# Optimized build with debug symbols, for flamegraphs (scripts/flamegraph.sh).
# Frame pointers (needed so perf can unwind the optimized stacks) are forced via
# RUSTFLAGS in that script — there is no stable Cargo profile key for them.
[profile.profiling]
inherits = "release"
debug = true

[lints.clippy]
# Bug-catching tier denied; style/dead-code stay at default warn (CI runs
# `cargo clippy --all-targets` and honours these levels).
correctness = { level = "deny", priority = -1 }
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
